<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_white"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_delivery"
            android:icon="@drawable/ic_delivery_white"
            android:title="@string/delivery"/>
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_favourites_white"
            android:title="@string/favourites"/>
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_email_white"
            android:title="@string/contact"/>
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_white"
            android:title="@string/map"/>
    </group>
</menu>

