<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.justeatcake.MainActivity">
    <item android:id="@+id/action_delivery"
        android:title="@string/delivery"
        android:icon="@drawable/ic_delivery_white"
        android:orderInCategory="10"
        app:showAsAction="always"/>

    <item android:id="@+id/action_favourites"
        android:icon="@drawable/ic_favourites_white"
        android:title="@string/favourites"
        android:orderInCategory="20"
        app:showAsAction="always"/>

    <item android:id="@+id/action_map"
        android:icon="@drawable/ic_map_white"
        android:title="@string/map"
        android:orderInCategory="30"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_contact"
        android:title="@string/contact"
        android:orderInCategory="40"
        app:showAsAction="never"/>

</menu>
