<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeliveryActivity">

    <TextView
        android:id="@+id/txtDeliveryInstruction"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp" app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/txtDeliveryInstruction"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtDeliveryInstruction"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp">
        <RadioButton
            android:id="@+id/optSameDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/same_day"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/optNextDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/standard"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/optCollection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collection"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>
